// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for persistence of PublicKey entities.
service PublicKeys {
  rpc UpdatePublicKey(UpdatePublicKeyRequest) returns (UpdatePublicKeyResponse);
}

message UpdatePublicKeyRequest {
  oneof parent {
    fixed64 external_data_provider_id = 1;
    fixed64 external_measurement_consumer_id = 2;
  }

  fixed64 external_certificate_id = 3;

  // Version the public API for serialized message definitions.
  string api_version = 4;

  // Serialized `EncryptionPublicKey` from public API.
  bytes public_key = 5;
  bytes public_key_signature = 6;
}

message UpdatePublicKeyResponse {}
